# ConAppsCM

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  ConsoleSimulator.cpp  main.cpp
apps/BoostUDP/: CMakeLists.txt  FecEngine.cpp  FecEngine.h  bStriperConfig.h  bStripes.cpp  bStripes.h  bUDP-Client.cpp  bUDP-Client.h  bUDP-Server.cpp  bUDP-Server.h  bUDP.h  common.h  debug_process.h  test-Client.cpp  test-Server.cpp
apps/ConsoleSimulator/: CMakeLists.txt  ConSim_main.cpp
apps/UDPClient/: CMakeLists.txt  UDPClient.cpp
apps/UDPServer/: CMakeLists.txt  UDPServer.cpp
config/: striper_cfg.json  test_cfg.json
external_libraries/: magic_enum.hpp
external_libraries/nlohmann/detail/conversions/: from_json.hpp
external_libraries/nlohmann/detail/input/: lexer.hpp
external_libraries/nlohmann/detail/meta/: logic.hpp  type_traits.hpp
include/PacketHeader/: PacketHeader.h
include/Simulator/: DevOutput.h  DevScheduler.h  DevStripe.h  DevTrafficGenerator.h  Devices.h  RootSim.h  SimCommon.h  SimConfiguration.h  SimTypes.h  event.h
include/cli/: CLI.h  CliMenu.h
include/utilities/: commandLineParser.h  logger.h  statistics.h  threadManager.h  utility.h  watchdog.h
notes/: DPDK-Install.md  Ubuntu-Install.md
src/: CMakeLists.txt  lib.cpp
src/Simulator/: CMakeLists.txt  DevOutput.cpp  DevScheduler.cpp  DevStripe.cpp  DevTrafficGenerator.cpp  Devices.cpp  RootSim.cpp
src/cli/: CLI.cpp  CMakeLists.txt
